@@ -25,7 +25,6 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonTypeName;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.google.auto.value.AutoValue;
-import com.google.common.collect.ImmutableMap;
 import org.graylog.scheduler.JobSchedule;
 import org.graylog.scheduler.clock.JobSchedulerClock;
 import org.joda.time.DateTime;
@@ -88,7 +87,7 @@ public abstract class CronJobSchedule implements JobSchedule {
 
     @Override
     public Optional<Map<String, Object>> toDBUpdate(String fieldPrefix) {
-        return Optional.of(ImmutableMap.of(
+        return Optional.of(java.util.Map.of(
                 fieldPrefix + JobSchedule.TYPE_FIELD, type(),
                 fieldPrefix + FIELD_CRON_EXPRESSION, cronExpression(),
                 fieldPrefix + FIELD_TIMEZONE, timezone().orElse(DEFAULT_TIMEZONE) // always store a TZ together with the cron expression
@@ -101,7 +100,7 @@ public abstract class CronJobSchedule implements JobSchedule {
     public abstract CronJobSchedule.Builder toBuilder();
 
     @AutoValue.Builder
-    public static abstract class Builder implements JobSchedule.Builder<Builder> {
+    public abstract static class Builder implements JobSchedule.Builder<Builder> {
 
         @JsonCreator
         public static Builder create() {
